k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xpense-tracker-backend
  namespace: xpense
spec:
  replicas: 2
  selector:
    matchLabels:
      app: xpense-tracker-backend
  template:
    metadata:
      labels:
        app: xpense-tracker-backend
    spec:
      containers:
        - name: xpense-tracker-backend
          image: ghcr.io/emil-ep/xpense-backend:latest
          ports:
            - containerPort: 8085
