k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: xpense-tracker-frontend
  namespace: xpense
spec:
  selector:
    app: xpense-tracker-frontend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
