k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: xpense-ingress
  namespace: xpense
spec:
  rules:
    - host: xpense.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: xpense-tracker-backend
                port:
                  number: 8085
          - path: /
            pathType: Prefix
            backend:
              service:
                name: xpense-tracker-frontend
                port:
                  number: 3000
